PrintGCApplicationStoppedTimeDemo：add some jvm params